; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/drivers/leds/extr_leds-rb750.c_rb750_led_remove.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/drivers/leds/extr_leds-rb750.c_rb750_led_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.rb750_led_drvdata = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @rb750_led_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rb750_led_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.rb750_led_drvdata*, align 8
  %4 = alloca i32, align 4
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.rb750_led_drvdata* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.rb750_led_drvdata* %6, %struct.rb750_led_drvdata** %3, align 8
  store i32 0, i32* %4, align 4
  br label %7

7:                                                ; preds = %22, %1
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.rb750_led_drvdata*, %struct.rb750_led_drvdata** %3, align 8
  %10 = getelementptr inbounds %struct.rb750_led_drvdata, %struct.rb750_led_drvdata* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = icmp slt i32 %8, %11
  br i1 %12, label %13, label %25

13:                                               ; preds = %7
  %14 = load %struct.rb750_led_drvdata*, %struct.rb750_led_drvdata** %3, align 8
  %15 = getelementptr inbounds %struct.rb750_led_drvdata, %struct.rb750_led_drvdata* %14, i32 0, i32 1
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = load i32, i32* %4, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = call i32 @led_classdev_unregister(i32* %20)
  br label %22

22:                                               ; preds = %13
  %23 = load i32, i32* %4, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %4, align 4
  br label %7

25:                                               ; preds = %7
  %26 = load %struct.rb750_led_drvdata*, %struct.rb750_led_drvdata** %3, align 8
  %27 = call i32 @kfree(%struct.rb750_led_drvdata* %26)
  ret i32 0
}

declare dso_local %struct.rb750_led_drvdata* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @led_classdev_unregister(i32*) #1

declare dso_local i32 @kfree(%struct.rb750_led_drvdata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
